# Projeto-Classificar-Imagem

./: .gitignore  README.md  setup.sh  start.sh
api-rust/: Cargo.toml
api-rust/classify-api/: Cargo.toml
api-rust/classify-api/src/: error.rs  main.rs  state.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ConfidenceBar.tsx  index.css  main.tsx
ml/: requirements.txt
ml/scripts/: cifar10_resnet.py  common.py
ml/sidecar/: main.py
